# omnirec

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  index.html  logs.html  package.json  selection-overlay.html  vite.config.ts
.github/workflows/: README.md  ci.yml  release.yml
docs/: cli.md  linux-custom-picker.md  requirements.md
omnirec-types/: Cargo.toml
omnirec-types/src/: lib.rs  types.rs
omnirec-types/src/ipc/: mod.rs  requests.rs
omnirec-types/src/security/: path_validation.rs  peer_verify.rs  validation.rs
openspec/: project.md
openspec/changes/add-macos-tray/: proposal.md
openspec/changes/add-wayland-linux-support/: tasks.md
openspec/changes/archive/2025-11-29-add-window-recording/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-30-add-fullscreen-capture/: proposal.md  tasks.md
openspec/changes/archive/2025-11-30-add-region-capture/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-05-add-wayland-linux-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-10-add-macos-capture/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-11-add-linux-highlight/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-11-add-thumbnail-preview/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-12-refactor-linux-thumbnail-screencopy/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-13-add-output-format-selection/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-13-update-region-selector-ux/: proposal.md  tasks.md
openspec/changes/archive/2025-12-14-add-aur-deployment/: proposal.md  tasks.md
openspec/changes/archive/2025-12-14-add-configuration-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-14-update-picker-passthrough/: proposal.md  tasks.md
openspec/changes/archive/2025-12-17-add-audio-recording/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-17-add-microphone-mixing/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-17-add-windows-audio-enumeration/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-17-add-windows-dpi-scale/: proposal.md  tasks.md
openspec/specs/about-tab/: spec.md
openspec/specs/app-configuration/: spec.md
openspec/specs/audio-capture/: spec.md
openspec/specs/command-line-interface/: spec.md
openspec/specs/display-capture/: spec.md
openspec/specs/gnome-tray-mode/: spec.md
openspec/specs/ipc-interface/: spec.md
openspec/specs/live-transcription-view/: spec.md
openspec/specs/macos-capture/: spec.md
openspec/specs/output-format/: spec.md
openspec/specs/platform-abstraction/: spec.md
openspec/specs/recording-control/: spec.md
openspec/specs/region-capture/: spec.md
openspec/specs/release-automation/: spec.md
openspec/specs/service-architecture/: spec.md
openspec/specs/system-tray/: spec.md
openspec/specs/thumbnail-capture/: spec.md
openspec/specs/voice-transcription/: spec.md
openspec/specs/wayland-capture/: spec.md
openspec/specs/wayland-portal/: spec.md
openspec/specs/window-capture/: spec.md
packaging/aur/: PKGBUILD  omnirec-bin.install  omnirec.desktop  omnirec.install
resources/linux/: xdph.conf
scripts/: generate-icons.sh  macos-clean  macos-reinstall  release.mjs  set-version.sh  sign-macos-whisper.sh  test-aur.sh  test-deb.sh  windows-clean.ps1  windows-install.ps1  windows-reinstall.ps1  write-local-tauri-config.py
src/: about.css  about.html  about.ts  config.css  config.html  config.ts  logs.css  logs.ts  main.ts  selection-overlay.css  selection-overlay.html  selection-overlay.ts  styles.css  transcript-view.css  transcript-view.html  transcript-view.ts
src-cli/: Cargo.toml
src-cli/src/: client.rs  colors.rs  commands.rs  exit_codes.rs  main.rs  platform.rs
src-common/: Cargo.toml
src-common/src/: lib.rs  logging.rs  types.rs
src-common/src/ipc/: protocol.rs  requests.rs  responses.rs
src-common/src/security/: mod.rs  path_validation.rs  peer_verify.rs  validation.rs
src-picker/: CMakeLists.txt  Cargo.toml  dialog.cpp  dialog.h  ipc_client.cpp  ipc_client.h  main.cpp  picker_logic.cpp  picker_logic.h
src-picker/qt-dialog/: CMakeLists.txt  main.cpp
src-picker/src/: dialog.rs  ipc_client.rs  main.rs  test_picker.rs
src-service/: Cargo.toml  build.rs
src-service/src/: main.rs  state.rs
src-service/src/capture/: mod.rs  thumbnail.rs  types.rs
src-service/src/encoder/: mod.rs
src-service/src/ipc/: handlers.rs  mod.rs  server.rs
src-service/src/transcription/: mod.rs  queue.rs  segment_buffer.rs  transcribe_state.rs  transcriber.rs  transcript_writer.rs  voice_detector.rs  whisper_ffi.rs
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.signing.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/capture/: error.rs  mod.rs  monitor_list.rs  recorder.rs  region_recorder.rs  thumbnail.rs  types.rs  windows_list.rs
src-tauri/src/capture/linux/: approval_token.rs  audio.rs  highlight.rs  ipc_server.rs  mod.rs  pipewire_capture.rs  portal_client.rs  screencopy.rs  thumbnail.rs
src-tauri/src/capture/macos/: audio.rs  highlight.rs  mod.rs  monitor_list.rs  recorder.rs  thumbnail.rs  window_list.rs
src-tauri/src/capture/windows/: audio.rs  highlight.rs  mod.rs  monitor_list.rs  recorder.rs  region.rs  thumbnail.rs  window_list.rs
src-tauri/src/commands/: audio.rs  capture.rs  config.rs  mod.rs  platform.rs  recording.rs  transcription.rs  windows.rs
src-tauri/src/encoder/: audio_pipe.rs  mod.rs
src-tauri/src/ipc/: client.rs  handlers.rs  mod.rs  server.rs
src-tauri/src/platform/: macos.rs  mod.rs
src-tauri/src/transcription/: mod.rs  queue.rs  transcribe_state.rs  transcriber.rs  voice_detector.rs  whisper_ffi.rs
src-tauri/src/tray/: linux.rs  macos.rs  mod.rs  windows.rs
src/lib/: logging.ts  window.ts
(+136 files in other folders)
