[workspace]
members = ["src-tauri", "src-common", "src-cli"]
resolver = "2"

# Note: CUDA acceleration for transcription:
# - Windows: Always included (falls back to CPU if no GPU available)
# - Linux: Enable via: cargo build -p omnirec --features cuda
#   Or use the Makefile targets: make build-cuda
