[workspace]
members = ["src-tauri", "omnirec-types", "src-cli"]
resolver = "2"

# Note: CUDA acceleration for transcription:
# - Windows: Always included (falls back to CPU if no GPU available)
# - Linux: Enable via: cargo build -p omnirec --features cuda
#   Or use the Makefile targets: make build-cuda

# =============================================================================
# Local development path override for vtx-engine.
#
# Uncomment this block to use a local sibling checkout of vtx-engine instead
# of the published crates.io version. Expected directory layout:
#   ~/ws/omnirec/omnirec/   ← this workspace
#   ~/ws/vtx-engine/        ← vtx-engine sibling workspace
#
# IMPORTANT: Keep this block commented out before committing. CI and release
# builds must always resolve vtx-engine from crates.io using the pinned version
# in src-tauri/Cargo.toml and src-cli/Cargo.toml.
# =============================================================================
# [patch.crates-io]
# vtx-engine = { path = "../../vtx-engine/crates/vtx-engine" }
