[package]
name = "screen-recorder-picker"
version = "0.1.0"
description = "Custom picker for xdg-desktop-portal-hyprland that queries the main screen-recorder app"
authors = ["you"]
edition = "2021"

[[bin]]
name = "screen-recorder-picker"
path = "src/main.rs"

[dependencies]
# Async runtime (minimal features needed)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }

# Serialization for IPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"
