[package]
name = "omnirec-picker"
version = "0.1.3"
description = "Custom picker for xdg-desktop-portal-hyprland that queries the main omnirec app"
authors = ["you"]
edition = "2021"

[[bin]]
name = "omnirec-picker"
path = "src/main.rs"

[[bin]]
name = "omnirec-picker-test"
path = "src/test_picker.rs"

[dependencies]
# Async runtime (minimal features needed)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }

# Serialization for IPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Portal access for test tool
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }
