[package]
name = "omnirec-picker"
version = "0.1.3"
description = "Custom picker for xdg-desktop-portal-hyprland that queries the main omnirec app"
authors = ["you"]
edition = "2021"

[[bin]]
name = "omnirec-picker"
path = "src/main.rs"

[[bin]]
name = "omnirec-picker-test"
path = "src/test_picker.rs"
required-features = ["test-tool"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }

# Serialization for IPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Random token generation (for future use)
rand = "0.8"

# Logging to syslog/journal
syslog = "7"

# Portal access for test tool (optional)
ashpd = { version = "0.9", default-features = false, features = ["tokio"], optional = true }

[features]
default = []
test-tool = ["ashpd"]
