[package]
name = "omnirec"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "omnirec_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Video encoding
ffmpeg-sidecar = "2"

# File paths
directories = "5"

# Date/time for filenames
chrono = "0.4"

# Image processing for thumbnails
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Base64 encoding for thumbnail data URIs
base64 = "0.22"

# =============================================================================
# Platform-specific dependencies
# =============================================================================

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
# Screen capture using Windows.Graphics.Capture API
windows-capture = "1"

# Windows APIs for window enumeration, highlight, and audio
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    # Audio device enumeration and capture via WASAPI
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Devices_Properties",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Variant",
    "Win32_Security",
] }

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
# Portal client for screencast requests
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }

# Acoustic Echo Cancellation - WebRTC AEC3 port
aec3 = "0.1"

# Hyprland IPC for window/monitor enumeration
hyprland = "0.4.0-beta.3"

# PipeWire for video capture
pipewire = "0.8"

# Logging
tracing = "0.1"

# Lazy initialization
once_cell = "1.19"

# Memory mapping for DMA-BUF frame access
libc = "0.2"

# Wayland client for layer-shell highlight overlay
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
# ScreenCaptureKit bindings for frame capture
screencapturekit = "0.2"

# Core Graphics for window/display enumeration
core-graphics = "0.24"

# Core Foundation for macOS system types
core-foundation = "0.10"

# Dispatch for async operations
dispatch = "0.2"

# objc2 for Objective-C runtime (NSWindow highlight)
# Must match versions used by Tauri to avoid conflicts
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSThread", "NSGeometry"] }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView", "NSColor", "NSScreen", "NSResponder", "NSGraphics"] }

# Block support for callbacks
block2 = "0.6"

libc = "0.2"
