[package]
name = "omnirec"
version = "0.1.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "omnirec_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Shared types and IPC protocol
omnirec-common = { path = "../src-common" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# File paths
directories = "5"

# Date/time for filenames
chrono = "0.4"

# Logging
tracing = "0.1"

# Find executables in PATH
which = "6"

# =============================================================================
# Platform-specific dependencies
# =============================================================================

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
# (No Windows-specific dependencies needed - capture moved to service)

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
# Hyprland IPC for window positioning and region selector
hyprland = "0.4.0-beta.3"

# For getting UID in socket path fallback
libc = "0.2"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
# Cocoa for NSWindow transparency
cocoa = "0.26"
