[package]
name = "omnirec"
version = "0.1.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "omnirec_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Enable CUDA GPU acceleration for transcription (Linux only)
cuda = []

[build-dependencies]
tauri-build = { version = "2", features = [] }
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Shared types and IPC protocol
omnirec-common = { path = "../src-common" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# File paths
directories = "5"

# Date/time for filenames
chrono = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Find executables in PATH
which = "6"

# HTTP client for model downloads and whisper model fetching
reqwest = { version = "0.12", features = ["stream", "blocking"] }

# For async stream processing (model downloads)
futures-util = "0.3"

# Dynamic library loading for whisper.cpp FFI
libloading = "0.8"

# Video encoding
ffmpeg-sidecar = "2"

# Image processing for thumbnails
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Base64 encoding for thumbnail data URIs
base64 = "0.22"

# =============================================================================
# Platform-specific dependencies
# =============================================================================

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
# Screen capture using Windows.Graphics.Capture API
windows-capture = "1"

# Acoustic Echo Cancellation
aec3 = "0.1"

# Windows APIs (merged features from service + app)
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_System_Pipes",
    "Win32_System_Memory",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Devices_Properties",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Variant",
    "Win32_Security",
    "Win32_Security_Authorization",
] }

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
# Portal client for screencast requests
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }

# Acoustic Echo Cancellation
aec3 = "0.1"

# Hyprland IPC for window/monitor enumeration and region selector
hyprland = "0.4.0-beta.3"

# PipeWire for video capture
pipewire = "0.8"
libspa = "0.8"
libspa-sys = "0.8"

# Lazy initialization
once_cell = "1.19"

# Wayland client for layer-shell highlight overlay
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
# Cocoa for NSWindow transparency
cocoa = "0.26"

# ScreenCaptureKit bindings
screencapturekit = "0.2"
screencapturekit-sys = "0.2"

# Core Audio for audio device enumeration
coreaudio-sys = "0.2"

# Core Graphics for window/display enumeration
core-graphics = "0.24"

# Foreign types for CGImage pointer handling
foreign-types = "0.5"

# Core Foundation for macOS system types
core-foundation = "0.10"

# Dispatch for async operations
dispatch = "0.2"

# objc2 for Objective-C runtime
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSThread", "NSGeometry"] }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView", "NSColor", "NSScreen", "NSResponder", "NSGraphics"] }

# Block support for callbacks
block2 = "0.6"
